Delegate widget overflowing to individual views' stylesheets Ugly fix for #182 - necessary until this webpack bug is fixed: https://github.com/webpack/webpack/issues/215

--- a/app/resonant-laboratory/views/widgets/DatasetView/style.css
+++ b/app/resonant-laboratory/views/widgets/DatasetView/style.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: stretch;
   justify-content: flex-end;
+  overflow: auto;
 }
 
 .DatasetView.content #editor {
